...
        Text(
          album.descriptions,
          style = MaterialTheme.typography.bodyMedium,
          modifier = Modifier.padding(top = 12.dp),
        )
        Text(
          "Tap anywhere to go back",
          style = MaterialTheme.typography.labelSmall,
          modifier = Modifier.padding(top = 24.dp),
        )
      }
    }
  }
...
