package com.guru.composecookbook.ui.utils

/**
 * This class stores all the test-tags of the :app module.
 *
 * @author https://github.com/iamjosephmj
 */
object TestTags {
  // bottom navigation
  const val BOTTOM_NAV_TEST_TAG = "bottom_navigation_bar"
  const val BOTTOM_NAV_HOME_TEST_TAG = "bottom_navigation_home"
  const val BOTTOM_NAV_WIDGETS_TEST_TAG = "bottom_navigation_widgets"
  const val BOTTOM_NAV_ANIM_TEST_TAG = "bottom_navigation_anim"
  const val BOTTOM_NAV_DEMO_UI_TEST_TAG = "bottom_navigation_demo_ui"
  const val BOTTOM_NAV_TEMPLATE_TEST_TAG = "bottom_navigation_template"

  /*
   * home screen
   */
  const val HOME_SCREEN_ROOT = "home_screen_root"

  // List
  const val HOME_SCREEN_LIST = "home_screen_list"
  const val HOME_SCREEN_LIST_ITEM = "home_screen_list_item"

  // Fling
  const val HOME_FLING_HEADER = "home_fling_header"
  const val HOME_FLING_LIST = "home_fling_list"
  const val HOME_FLING_LIST_BUTTON = "home_fling_list_button"
  const val HOME_FLING_SETTINGS_BUTTON = "home_fling_settings_button"

  // Fling Settings
  const val HOME_FLING_SETTINGS_ROOT = "home_fling_settings_root"
  const val HOME_FLING_SETTINGS_APPLY = "home_fling_settings_apply"
  const val HOME_FLING_SETTINGS_EDITABLE = "home_fling_settings_editable"

  // Layouts
  // Row
  const val HOME_LAYOUTS_ROW_START = "home_layouts_row_start"
  const val HOME_LAYOUTS_ROW_END = "home_layouts_row_end"
  const val HOME_LAYOUTS_ROW_CENTER = "home_layouts_row_center"
  const val HOME_LAYOUTS_ROW_SPACE_AROUND = "home_layouts_row_space_around"
  const val HOME_LAYOUTS_ROW_SPACE_BETWEEN = "home_layouts_row_space_between"
  const val HOME_LAYOUTS_ROW_SPACE_EVENLY = "home_layouts_row_space_evenly"

  // Column
  const val HOME_LAYOUTS_COLUMN_TOP = "home_layouts_column_top"
  const val HOME_LAYOUTS_COLUMN_BOTTOM = "home_layouts_column_bottom"
  const val HOME_LAYOUTS_COLUMN_CENTER = "home_layouts_column_center"
  const val HOME_LAYOUTS_COLUMN_SPACE_AROUND = "home_layouts_column_space_around"
  const val HOME_LAYOUTS_COLUMN_SPACE_EVENLY = "home_layouts_column_space_evenly"
  const val HOME_LAYOUTS_COLUMN_SPACE_BETWEEN = "home_layouts_column_space_between"

  // Box
  const val HOME_LAYOUTS_BOX_NO_ALIGN = "home_layouts_box_no_align"
  const val HOME_LAYOUTS_BOX_TOP_CENTER_AND_NO_ALIGN = "home_layouts_box_top_center"

  // Constraint layout
  const val HOME_LAYOUTS_CONSTRAINT_LAYOUT = "home_layouts_constraint_layout"

  /*
   * animation screen
   */
  const val ANIM_SCREEN_ROOT = "anim_screen_root"

  /*
   * demo screen
   */
  const val DEMO_SCREEN_ROOT = "demo_screen_root"

  /*
   * widget screen
   */
  const val WIDGET_SCREEN_ROOT = "widget_screen_root"

  /*
   * template UI
   */
  const val TEMPLATE_SCREEN_ROOT = "template_screen_root"
}
