...
     * fling behaviour.
     */
    val flingStateCopy = FlingStateStore.INSTANCE.copy()

    val radioSelection = remember {
      // default selection is smooth-scroll behaviour.
      mutableStateOf("smooth")
    }
    // Radio buttons used for selecting native, smooth or custom scroll behaviours.
    BuildRadioButton(radioSelection, flingStateCopy)

    // Edit texts for setting the custom scroll behaviour.
    BuildRadioSelectionPage(radioSelection, flingStateCopy, onApplyClick)
...
  flingCopyStore: FlingStateStore,
  onApplyClick: () -> Unit,
) {
  /*
   * Build EditTexts if the user is selecting the custom radio button.
   */
  if (radioSelection.value == "custom" || flingCopyStore.type.ordinal == 2) {
    // Rendering all the EditTexts to get values for the custom fling behaviour.
    BuildEditTexts(onApplyClick, flingCopyStore)
  } else {
    // Else, only draw `Apply` button
    DrawApplyButton(onApplyClick, flingCopyStore)
  }
...
    }
  }
}

@Composable
fun BuildRadioButton(radioSelection: MutableState<String>, flingCopyStore: FlingStateStore) {
  val options = listOf("native", "smooth", "custom")
  radioGroup(
    radioOptions = options,
    flingCopyStore = flingCopyStore,
    onItemSelection = { selection ->
      flingCopyStore.type =
        when (options.indexOf(selection)) {
...
